# UR7e-Reinforcement-Learning-Suite

./: .gitignore  LICENSE  README.md
line-follower-real-implementation/: MAIN.sh  README.md  SHA256SUMS
line-follower-real-implementation/config/: real.env
line-follower-real-implementation/ros2_ws/src/ur7e_visual_rl_demo/: package.xml  setup.cfg  setup.py
line-follower-real-implementation/ros2_ws/src/ur7e_visual_rl_demo/launch/: system.launch.py
line-follower-real-implementation/ros2_ws/src/ur7e_visual_rl_demo/resource/: ur7e_visual_rl_demo
line-follower-real-implementation/ros2_ws/src/ur7e_visual_rl_demo/ur7e_visual_rl_demo/: calibrated_kinematics.py  camera_laser_calibrator.py  command_filter.py  common.py  laser_geometry_probe.py  laser_kinematics.py  model_check.py  observer_dashboard.py  observer_ekf.py  observer_probe.py  visual_detector.py  visual_policy_runner.py
line-follower-simulation-complete/: README.md
line-follower-simulation-complete/package/: package.xml  setup.cfg  setup.py  test_components.py
line-follower-simulation-complete/package/config/: ur7e_laser_controllers.yaml
line-follower-simulation-complete/package/launch/: simulation.launch.py
line-follower-simulation-complete/package/tests/: conftest.py  test_cartesian_control.py  test_gazebo_async.py  test_klt_confidence.py  test_obs_invariant.py  test_random_drawing_schedule.py  test_reward_v5.py  test_rl_v23.py  test_ros_line_detector.py  test_scene_contract.py  test_sim_laser_overlay.py  test_static_camera_geometry.py  test_static_camera_laser.py  test_tangent.py  test_training_cli_guard.py  test_v31_merge_contracts.py  test_v32_task_preserving_filter.py  test_watchdog.py
line-follower-simulation-complete/package/ur7e_line_follower/: __init__.py  analyse_commande.py  bridge.py  camera_line_detector.py  demo_gazebo.py  ekf.py  eval_full.py  kinematics.py  metrics.py  phase1_repeatability.py  reward.py  schema_bloc.py  singularity.py  target_line.py  train.py  training_monitor.py  visual_test.py
line-follower-simulation-complete/package/urdf/: ur7e_with_laser.urdf.xacro
line-follower-simulation-complete/package/worlds/: line_follower.sdf
line-follower-simulation-simple/: README.md  demo_suivi.launch.py  requirements.txt  train_traj.py  trajectory_generator.py  ur7e_env_v4.py  ur7e_generated.urdf  ur7e_rl.rviz  ur7e_traj_env.py  visu_suivi_3d.py  viz_traj.py
target-reaching-obstacle-avoidance/: MISSING_PREREQUISITE.md  README.md  requirements.txt
(+100 files in other folders)
